--- a/bin/jdbc.properties
+++ b/bin/jdbc.properties
@@ -1,9 +1,9 @@
 jpa.database=org.hibernate.dialect.MySQL5Dialect
-jdbc.ring.database=org.hibernate.dialect.MySQL5Dialect
-jdbc.ring.driverClassName=com.mysql.jdbc.Driver
-jdbc.ring.url=jdbc:mysql://203.195.179.183:8084/ring?useUnicode=true&characterEncoding=utf-8
-jdbc.ring.username=root
-jdbc.ring.password=zhangtao123
+jdbc.mifi.database=org.hibernate.dialect.MySQL5Dialect
+jdbc.mifi.driverClassName=com.mysql.jdbc.Driver
+jdbc.mifi.url=jdbc:mysql://203.195.179.183:8084/ring?useUnicode=true&characterEncoding=utf-8
+jdbc.mifi.username=root
+jdbc.mifi.password=zhangtao123
 
 
 #druid
