--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="conf"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="libs/aopalliance-1.0.jar"/>
@@ -24,5 +25,8 @@
 	<classpathentry kind="lib" path="libs/spring-test-4.2.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="libs/spring-tx-4.2.0.RELEASE.jar"/>
 	<classpathentry kind="lib" path="libs/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="libs/mybatis-3.3.0.jar"/>
+	<classpathentry kind="lib" path="libs/mybatis-spring-1.2.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
