--- a/bin/jdbc.properties
+++ b/bin/jdbc.properties
@@ -1,7 +1,7 @@
 jpa.database=org.hibernate.dialect.MySQL5Dialect
 jdbc.mifi.database=org.hibernate.dialect.MySQL5Dialect
 jdbc.mifi.driverClassName=com.mysql.jdbc.Driver
-jdbc.mifi.url=jdbc:mysql://203.195.179.183:8084/ring?useUnicode=true&characterEncoding=utf-8
+jdbc.mifi.url=jdbc:mysql://203.195.179.183:8084/mifi?useUnicode=true&characterEncoding=utf-8
 jdbc.mifi.username=root
 jdbc.mifi.password=zhangtao123
 
